# bindfetto

./: .gitignore  CLAUDE.md  LICENSE  README.md  ROADMAP.md  SPEC.md  bump-version.sh  install.sh  release.sh  run-tests.sh
app/: README.md
app/app/src/main/java/com/bindfetto/control/: ControlClient.kt  MainActivity.kt
bindfetto-app/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
bindfetto-app/app/: build.gradle.kts
bindfetto-app/app/src/main/: AndroidManifest.xml
bindfetto-app/app/src/main/java/com/bindfetto/control/: ControlClient.kt  Theme.kt
bindfetto-app/app/src/main/res/values/: ic_launcher_background.xml
catalog/: README.md  bindfetto_catalog.py
catalog/tests/: test_builder.py
decode/: Cargo.toml  README.md
decode/include/: bindfetto_decode.h
decode/src/: catalog.rs  ffi.rs  lib.rs  main.rs  parcel.rs  parse.rs
decode/tests/: decode.rs
decode/tests/fixtures/: catalog.json
docs/: presentation.html
plugins/dlt/: CMakeLists.txt  README.md  bindfettodecoderplugin.cpp  bindfettodecoderplugin.h  bindfettodecoderplugin.json
plugins/vscode/: README.md  package-lock.json  package.json
plugins/vscode/src/: catalog.ts  decoder.ts  extension.ts
runtime/: Cargo.toml  README.md
runtime/.cargo/: config.toml
runtime/bindfetto/: Cargo.toml  build.rs
runtime/bindfetto-common/src/: lib.rs
runtime/bindfetto-core/: Cargo.toml
runtime/bindfetto-core/src/: dlt.rs  lib.rs
runtime/bindfetto-ebpf/: Cargo.toml
runtime/bindfetto-ebpf/src/: main.rs
runtime/bindfetto/src/: dlt_wire.rs  main.rs
