[package]
name = "bindfetto-decode"
version = "0.2.0"
edition = "2021"
description = "Offline method-name decoding for bindfetto logs (plugin-agnostic core + CLI)."
license = "Apache-2.0"

[lib]
name = "bindfetto_decode"
path = "src/lib.rs"
# rlib for the CLI + tests; staticlib/cdylib expose the C ABI (src/ffi.rs) that the
# DLT Viewer (C++) plugin and other native embedders link against.
crate-type = ["rlib", "staticlib", "cdylib"]

[[bin]]
name = "bindfetto-decode"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
