# Cargo workspace for the on-device runtime: eBPF probe + userspace consumer.
#
# bindfetto-ebpf is a member (so the consumer's build.rs can `cargo build
# --package bindfetto-ebpf` for the bpf target via aya-build) but NOT a default
# member, so a plain `cargo build` only builds the userspace crates for the host/
# Android target — the eBPF crate is compiled separately for bpfel-unknown-none.
[workspace]
resolver = "2"
members = ["bindfetto", "bindfetto-common", "bindfetto-ebpf"]
default-members = ["bindfetto", "bindfetto-common"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# Pinned to a recent aya release. UNVERIFIED in this repo (no toolchain present) —
# confirm against the latest aya when you first build, or regenerate the boilerplate
# with `cargo generate aya-template` and drop the src/ files in. See README.md.
[workspace.dependencies]
aya = "0.13"
aya-build = "0.1"
aya-ebpf = "0.1"
aya-log = "0.2"
aya-log-ebpf = "0.1"
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net"] }
