[package]
name = "bindfetto-ebpf"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# Built for bpfel-unknown-none via the consumer's build.rs (aya-build). A member
# of the runtime workspace (but not a default member) so `--package` resolves.
[dependencies]
aya-ebpf = "0.1"
aya-log-ebpf = "0.1"
bindfetto-common = { path = "../bindfetto-common" }

[[bin]]
name = "bindfetto"
path = "src/main.rs"
